dev/test_programs/INVALID/group1/stmt14.go
package main;

func main(){
	var x [1.0] float64;
}
